kubernetes/infrastructure/monitoring/prometheus/network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  labels:
    app.kubernetes.io/name: grafana-ingress
spec:
  tls:
    - hosts:
        - grafana.jakubchyla.com
      secretName: grafana-tls
  rules:
  - host: grafana.jakubchyla.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-helmrelease-grafana
            port:
              number: 80
